--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "intervention/image": "^3.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "mcamara/laravel-localization": "^2.0"
+        "mcamara/laravel-localization": "^2.0",
+        "spatie/pdf-to-image": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
