--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.0",
+        "spatie/laravel-permission": "^6.10",
         "spatie/pdf-to-image": "^1.2",
         "yajra/laravel-datatables": "11.0"
     },
