--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "codezero/laravel-unique-translation": "^4.3",
         "intervention/image": "^3.9",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "mcamara/laravel-localization": "^2.0",
         "spatie/laravel-permission": "^6.10",
+        "spatie/laravel-translatable": "^6.8",
         "spatie/pdf-to-image": "^1.2",
         "yajra/laravel-datatables": "11.0"
     },
